// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. block 1`] = `
<View>
  Some text is here 
  <View>
    and there is some 
    <View>
      more text 
      <Text>
        and in here
      </Text>
    </View>
     after it too
  </View>
   and here
</View>
`;

exports[`2. bold 1`] = `
<Text
  style={
    Object {
      "fontWeight": "bold",
    }
  }
>
  some text here
</Text>
`;

exports[`3. break 1`] = `
<Text>
  

</Text>
`;

exports[`4. image tag 1`] = `<View />`;

exports[`5. inline 1`] = `
<Text>
  some other text here
</Text>
`;

exports[`6. italic 1`] = `
<Text
  style={
    Object {
      "fontStyle": "italic",
    }
  }
>
   some more text here
</Text>
`;

exports[`7. paragraph 1`] = `
<Text>
  This is the text for paragraph one
</Text>
`;

exports[`8. does not render a script tag 1`] = `<View />`;
